# igorrrbot

./: .gitignore  Cargo.toml  README.md
src/: commands.rs  config.json  dbms.rs  main.rs  ticket.rs  utils.rs
